# libxls

./: AUTHORS  CMakeLists.txt  CMakelists.txt
cplusplus/: CMakeLists.txt
cplusplus/include/: XlsReader.h
cplusplus/src/: XlsReader.cpp
include/libxls/: locale.h
src/: locale.c  ole.c  xls.c  xlstool.c
